# R-scape

./: 00README  00README-web  CHANGELOG  INSTALL  LICENSE  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac  trna1415_annote_random20.sto
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
documentation/: .#main.tex  Makefile.in  ack.tex  copyright.tex.in  install.tex  introduction.tex  main.tex  more.tex  options.tex  ouput.tex  output.tex  outputs.tex  titlepage.tex.in  tutorial.tex
lib/: 00README.git
lib/R2R/NotByZasha/infernal-0.7/: Makefile  Makefile.in  config.status  configure.ac
lib/R2R/NotByZasha/infernal-0.7/squid/: Makefile.in  afetch  aligneval.c  alistat  compalign  compstruct  configure  revcomp  seqsplit  seqstat  sfetch  shuffle  shuffle_main.c  sindex  squid.h.in  sre_stack.c  sreformat  ssi.c  translate  weight
lib/R2R/NotByZasha/infernal-0.7/squid/Testsuite/: Makefile  exercises.sqc
lib/R2R/R2R-1.0.6/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  git-version  info.package  r2r-gpl-text.txt  r2r-license-text.txt  r2r-perl-gpl-text.txt  to-do.txt
lib/R2R/R2R-1.0.6/NotByZasha/cfsqp/: Makefile  Makefile.am  Makefile.in  cfsqpusr.h  qld.c
lib/R2R/R2R-1.0.6/NotByZasha/infernal-0.7/: 00README-R2R
lib/R2R/R2R-1.0.6/NotByZasha/infernal-0.7/squid/: Makefile  Makefile.am  Makefile.in  phylip.c  revcomp.c  rk.c  squid.h  squid.h.in  squidconf.h  squidconf.h.in  sre_stack.h  stamp-h2  vectorops.c  wuss.c
lib/R2R/R2R-1.0.6/NotByZasha/infernal-0.7/squid/.deps/: a2m.Po  aligneval.Po  alignio.Po  clustal.Po  cluster.Po  dayhoff.Po  dirichlet.Po  eps.Po  file.Po  getopt.Po  gki.Po  hsregex.Po  iupac.Po  msa.Po  msf.Po  phylip.Po  revcomp.Po  rk.Po  selex.Po  seqencode.Po  shuffle.Po  sqerror.Po  sqio.Po  squidcore.Po  sre_ctype.Po  sre_math.Po  sre_random.Po  sre_stack.Po  sre_string.Po  ssi.Po  stockholm.Po  stopwatch.Po  translate.Po  types.Po  vectorops.Po  weight.Po  wuss.Po
lib/R2R/R2R-1.0.6/R2R-manual/: R2R-manual.tex  bio.bib
lib/R2R/R2R-1.0.6/R2R-manual/figures/: CTTmp0  demo-SAM-IV-alternate.ai  demo-breakpair-varlen.ai  demo-breakpair.ai  demo-cyano-30S.ai  demo-ii.ai  demo-iii.ai  demo-pknot-callout.ai  demo-pknot-inline.ai  demo1.ai  manA-cover.ai  manA-logo.ai  modular-c4.ai  modular-demo.ai  multistem-default.ai  multistem-manual.ai  multistem-solver-HEARO2.ai  multistem-solver-IMES-1.ai  multistem-solver-manA-older-R2R.ai  multistem-solver-manA.ai  multistem-solver.ai  place_explicit.ai  turnsteminternal.ai
lib/R2R/R2R-1.0.6/autom4te.cache/: output.0  requests  traces.0
lib/R2R/R2R-1.0.6/codelite-workspace/: Makefile  R2R.workspace
lib/R2R/R2R-1.0.6/codelite-workspace/R2R/: R2R.mk  R2R.project  R2R.txt
lib/R2R/R2R-1.0.6/demo/: Makefile  MetamakeDemos.pl  demo-pe.sto  demo-pknot-inline.sto  demo1-iii.r2r_meta
lib/R2R/R2R-1.0.6/demo/104/: 6S-flavo.r2r_meta  AdoCbl-variant.sto  COG2252.r2r_meta  Chlorobi-RRM.r2r_meta  Cyano-2.sto  JUMPstart.sto  Lacto-usp.r2r_meta  Pyrobac-HINT.sto  SAM-SAH.r2r_meta  SAM-chlorobi.r2r_meta  c4-a1b1.r2r_meta  crcB.r2r_meta  icd.sto  manA.r2r_meta  manA.sto  mraW.r2r_meta  pfl.r2r_meta  pheA.r2r_meta  rmf.r2r_meta  sanguinis-hairpin.sto  yjdF.sto
lib/R2R/R2R-1.0.6/demo/22/: 00credits.txt  lacto-1.r2r_meta
lib/R2R/R2R-1.0.6/demo/SAM-IV/: SAM-IV.r2r_meta
lib/R2R/R2R-1.0.6/demo/THF/: THF.r2r_meta
lib/R2R/R2R-1.0.6/demo/exceptional/: IMES-1.sto  IMES-2.r2r_meta  IMES-4.sto
lib/R2R/R2R-1.0.6/demo/meta/: Bacillus-plasmid.r2r_meta  C4.r2r_meta  Desulfotalea-1.r2r_meta  Dictyoglomi-1.r2r_meta.solver-cache  GOLLD.r2r_meta  GOLLD.r2r_meta.solver-cache  HEARO.r2r_meta  HEARO.r2r_meta.solver-cache  IMES-1.r2r_meta.solver-cache  L17DE.r2r_meta  Moco.r2r_meta.solver-cache  PhotoRC-II.r2r_meta  Rhodopirellula-1.r2r_meta  SAM-IV.r2r_meta.solver-cache  ScriptInputExample.r2r_meta  THF.r2r_meta.solver-cache  TestAngularAlignment.r2r_meta.solver-cache  U1.r2r_meta.solver-cache  c-di-GMP-II.r2r_meta  c-di-GMP-II.r2r_meta.solver-cache  crcB.r2r_meta.solver-cache  demo-breakpair-fix4.r2r_meta  demo-multistem-HEARO2.r2r_meta.solver-cache  demo-multistem-IMES-1.r2r_meta.solver-cache  demo-multistem-manA.r2r_meta.solver-cache  demo-multistem.r2r_meta.solver-cache  group-II-DV-DVI.r2r_meta.solver-cache  hammerhead-typeII.r2r_meta  lacto-2.r2r_meta  manA.r2r_meta  manA.r2r_meta.solver-cache  msiK.r2r_meta  nuoG.r2r_meta  potC.r2r_meta.solver-cache  solver-formulation1-1.r2r_meta  solver-formulation1-1.r2r_meta.solver-cache  solver-formulation2-1.r2r_meta.solver-cache  two-glycine.r2r_meta.solver-cache  uneven-internal-loop.r2r_meta.solver-cache  yjdF.r2r_meta
lib/R2R/R2R-1.0.6/src/: AdobeGraphics.cpp  AdobeGraphics.h  AdobeGraphicsLayout.cpp  AdobeGraphicsLayout.h  AdobeGraphicsPdfLike.cpp  AdobeGraphicsPdfLike.h  CommaSepFileReader.cpp  CommaSepFileReader.h  GSCConsensus.cpp  GSCConsensus.h  LabelsAndProjection.cpp  Makefile  Makefile.am  Makefile.in  MiscExceptions.cpp  MiscExceptions.h  NoUnderflowDouble.h  Optimize.cpp  Optimize.h  Optimize_cfsqp.cpp  Optimize_nlopt.cpp  ParseOneStockholm.cpp  ParseSs.cpp  PdfGraphics.cpp  PdfGraphics.h  PositionBackbone.cpp  PositionBackbone_MultiStemCircular.cpp  PositionBackbone_MultiStemCircularSolver.cpp  PositionsToIgnore.cpp  PositionsToIgnore.h  R2R-Utils.cpp  R2R.cpp  R2R.h  R2R_Stockholm.pm  RnaDrawer.cpp  SelectSubFamilyFromStockholm.pl  Stockholm.pm  SvgGraphics.cpp  SvgGraphics.h  SymbolicMath.cpp  (+10 more)
lib/R2R/R2R-1.0.6/src/.deps/: AdobeGraphics.Po  AdobeGraphicsLayout.Po  AdobeGraphicsPdfLike.Po  CommaSepFileReader.Po  GSCConsensus.Po  LabelsAndProjection.Po  MiscExceptions.Po  Optimize.Po  Optimize_cfsqp.Po  Optimize_nlopt.Po  ParseOneStockholm.Po  ParseSs.Po  PdfGraphics.Po  PositionBackbone.Po  PositionBackbone_MultiStemCircular.Po  PositionBackbone_MultiStemCircularSolver.Po  PositionsToIgnore.Po  R2R-Utils.Po  R2R.Po  RnaDrawer.Po  SvgGraphics.Po  SymbolicMath.Po
python/: R-scape_power.ipynb
scripts/: CaCoFold-compare-SScons.pl  FUNCS.pm  PDBFUNCS.pm  R-scape_motifs.pl  YuleSimpson.pl  afa2msa.pl  (+11 more)
(+1282 files in other folders)
